<resources>
    <string name="app_name">LayoutProject</string>
    <string name="button">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="checkbox1">CheckBox 1</string>
    <string name="checkbox2">CheckBox 2</string>
    <string name="checkbox3">CheckBox 3</string>
    <string name="checkbox4">CheckBox 4</string>
    <string name="radio1">Radio 1</string>
    <string name="radio2">Radio 2</string>
    <string name="avatar">avatar</string>
    <string name="FaceDrawing">Pen drawing of a man.</string>
</resources>